--- a/foodapp/templates/menu.html
+++ b/foodapp/templates/menu.html
@@ -5,7 +5,7 @@
 <p>{{item.name}}</p>
 <p>${{item.price}}</p>
 <img src="{{item.image}}" alt="">
-<button onclick="addedtocart({{item.item_id}})">Add to Cart</button>
+<button onclick="addedtocart({{item.item_id}})">Add to cart</button>
 
 
 {%endfor%}
