--- a/foodapp/templates/navbar.html
+++ b/foodapp/templates/navbar.html
@@ -33,8 +33,14 @@
               </li>
             </li>
           </ul>
-          <a href="#" class="btn btn-brand">Order Online</a>
+          <a href="/cart" class="btn btn-brand">My Cart</a>
+          
         </div>
       </div>
+      <form action="/logout" method="POST" class="center">
+      
+        <button type="submit" id='log-out'>Log Out</button>  
+  
+      </form>
     </nav>
 
