--- a/foodapp/templates/sign_up.html
+++ b/foodapp/templates/sign_up.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}sign_up{% endblock %}
 {% block html_head %}
-    <link rel="stylesheet" href="/static/login.css">
+    <link rel="stylesheet" href="/static/signin.css">
 {% endblock %}
   
 {% block body %}
@@ -40,3 +40,6 @@
     </p>
   </form>
   {% endblock %}
+  
+	 
+	  
