--- a/foodapp/templates/home.html
+++ b/foodapp/templates/home.html
@@ -2,6 +2,7 @@
   
 {% block title %} home {% endblock%}
 {% block body %} 
+{%include 'navbar.html'%}
 {% include "signin.html" %} 
 {% endblock%}
 
