--- a/foodapp/templates/signin.html
+++ b/foodapp/templates/signin.html
@@ -1,10 +1,10 @@
 
-{% extends 'base.html' %}
+ {% extends 'base.html' %}
 {% block title %}sigin{% endblock %}
 
 {% block body %}
 
-<h2>Log In</h2>
+<h2>Sign In</h2>
   <form action="/signin" method="POST">
     <p>
       Email <input type="text" name="email">
@@ -14,8 +14,13 @@
       Password <input type="password" name="password">
     </p>
 
-    <p>
+    <p> 
       <input type="submit">
+      <h5>No account yet? <a href = "/sign_up">Create Account</a></h5>
     </p>
   </form>
-{% endblock %}
+{% endblock %} 
+
+
+
+
