--- a/foodapp/templates/navbar.html
+++ b/foodapp/templates/navbar.html
@@ -24,11 +24,11 @@
               <a class="nav-link" href="/home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="/about">About</a>
               <li class="nav-item">
                 <a class="nav-link" href="/menu">Menu</a>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contact">Contact</a>
+                  <a class="nav-link" href="/contact">Contact</a>
                 </li>
               </li>
             </li>
