--- a/foodapp/templates/contact.html
+++ b/foodapp/templates/contact.html
@@ -1,10 +1,80 @@
 {% extends 'base.html' %}
 {% block title %} contact us  {% endblock%}
 {% block body%}
-{% include 'navbar.html'%}
+{% include "navbar.html" %}
+
+<link rel="stylesheet" href="../static/signin.css">
+ 
+<section class="form my-4 mx-5">
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-lg-5">
+        <img src="../static/images/burger1.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-5 px-5 pt-5">
+        <h1 class="font-weight-bold py-3 text-dark">Contact Us</h1>
+        <form action="/signin" method="POST">
+			<div class="form-group mb-5">
+				<label>Your Name (optional)</label>
+				<input name="mouseglue" type="text" class="form-control" placeholder="John Doe" value="" autocomplete="off" hidden="">
+				<input name="name" type="text" class="form-control" placeholder="John Doe" value="">
+			</div>
+          <div class="form-group mb-5">
+			<label>Your Email Address</label>
+			<input name="email" type="email" class="form-control" placeholder="name@example.com" value="">
+		</div>
+		  <div class="form-group mb-4">
+			<label>Your Message</label>
+			<textarea name="message" class="form-control" rows="3" maxlength="300"></textarea>
+		</div>
+          <div class="form-row">
+            <div class="col-lg-7">
+              <button type="button" class="btn1 mt-3 mb-5">Submit</button>
+
+            </div>
+
+          </div>
+          
+        </form>
 
 
-<section class="bg-light">
+      </div>
+
+
+
+    </div>
+
+  </div>
+
+</section>
+
+
+{% endblock%}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <section class="bg-light">
 	<div class="container py-6">
 		<div class="lc-block py-lg-3">
 			<div editable="rich">
@@ -23,7 +93,7 @@
 			<div class="col-lg-6 my-auto p-4">
 				<div class="lc-block col-xl-8 offset-xl-2">
 
-					<form method="post">
+					<form action="/contact" method="post">
 
 						<div class="form-group mb-5">
 							<label>Your Name (optional)</label>
@@ -54,5 +124,4 @@
 			</div>
 		</div>
 	</div>
-</section>
-{% endblock%}
+</section> -->
