--- a/foodapp/templates/home.html
+++ b/foodapp/templates/home.html
@@ -1,9 +1,25 @@
 {% extends 'base.html' %}
   
 {% block title %} home {% endblock%}
+
 {% block body %} 
-{%include 'navbar.html'%}
-{% include "signin.html" %} 
+<link rel="stylesheet" href="../static/home.css">
+
+
+    <div class="main-content">
+      <div class="content">
+          <h1>Super Delicious</h1>
+          <h2>BURGER</h2>
+          <a href="/menu" id="btn1"> <button> Order Now</button></a>
+          
+          
+          
+      </div>
+  </div>
+  
+  </div>
+
+
 {% endblock%}
 
 
