--- a/foodapp/templates/index.html
+++ b/foodapp/templates/index.html
@@ -3,7 +3,7 @@
 {% block body %}
 <!-- <button id = "view_menu">View Menu</button> -->
 {% include "navbar.html" %} 
-{% include "signin.html" %} 
+{% include "home.html" %} 
 
 <!-- <script src="../static/index.js"></script> -->
 
