--- a/foodapp/templates/menu.html
+++ b/foodapp/templates/menu.html
@@ -1,16 +1,39 @@
-{% extends 'base.html' %}
+ {% extends 'base.html' %} 
 {% block title %} menu {% endblock%}
 {% block body %}
 {% include "navbar.html" %}
-{% for item in menu_items %}
-<p>{{item.name}}</p>
-<p>${{item.price}}</p>
-<img src="{{item.image}}" alt="">
-<button onclick="addedtocart({{item.item_id}})">Add to cart</button>
+
+<link rel="stylesheet" href="../static/menu.css">
+<div class="imgcontainer">
 
 
-{%endfor%}
+{% for item in menu_items%}
+<div class="container">
+    <div class="new-card">
+        <div class="row" style="margin-top: 50px;">
+            {#<div class="col-md-4 py-3 py-md-0 ">#}
+                <div class="card">
+                    <img class="card-image-top" src="{{item.image}}" alt="">
+                    <div class="card-body">
+                        <h2 class="card-titel text-center">{{item.name}}</h2>
+                        <h3 class="card-titel text-center">Price: {{item.price}}</h3>
+                        <p class="card-text text-center"></p>
+                        <div id="btn3"><button onclick="addedtocart({{item.item_id}})">Add to cart</button></div>
+                        
+                    </div>
+                {#</div>#}
+                 
+            </div> 
+            {%endfor%} 
+            </div>
+              
+         
+
+
+
+
 <script src="../static/menu.js"></script>
 
-{%endblock%}
+{%endblock%} 
 
+  
