--- a/foodapp/templates/order_summery.html
+++ b/foodapp/templates/order_summery.html
@@ -1,20 +1,39 @@
+{% extends 'base.html' %}
+{% block title %} order summert  {% endblock%}
 
-<link rel="stylesheet" type="text/css" href="../static/order_summery.css" />
+{% block body %}
+
+
+<!-- <link rel="stylesheet" type="text/css" href="../static/order_summery.css" /> -->
+
 <div class="container mt-5 d-flex justify-content-center">
     <div class="card p-4 mt-3">
        <div class="first d-flex justify-content-between align-items-center mb-3">
          <div class="info">
-             <span class="d-block name">Thank you, {name}</span>
-             <span class="order">Order - {order_id}</span>
+             <span class="d-block name">Thank you, {{name}}</span>
+
+             <span class="order">Order - {{order_id}}</span>
               
          </div>
         
-          <img src="https://i.imgur.com/NiAVkEw.png" width="40"/>
+          <!-- <img src="https://i.imgur.com/NiAVkEw.png" width="40"/> -->
            
 
        </div>
            <div class="detail">
        <span class="d-block summery">Your order has been dispatched. we are delivering you order.</span>
            </div>
+           <div>
+            {% for item in order_items %}
+            <p>{{item.menu_item.name}}</p>
+            <p>{{item.quantity}}</p>
+            <p>{{item.price}}</p>
+            {% endfor %}
+           </div>
+           <div>
+            order total: ${{total}}
+           </div>
+
        
  </div>
+ {% endblock %}
