--- a/foodapp/templates/sign_up.html
+++ b/foodapp/templates/sign_up.html
@@ -5,41 +5,85 @@
 {% endblock %}
   
 {% block body %}
+{% include "navbar.html" %}
 
-
-<h2>Create an Account</h2>
-  <form action="/users" method="POST">
-	<p>
-		Name <input type="text" name="name">
-	  </p>
-    <p>
-      Email <input type="text" name="email">
-    </p>
-
-    <p>
-      Password <input type="password" name="password">
-    </p>
-	<p>
-		Phone <input type="text" name="phone">
-	  </p>
-	  <p>
-		Street <input type="text" name="street">
-	  </p>
-	  <p>
-		City <input type="text" name="city">
-	  </p>
-	  <p>
-		Zipcode <input type="text" name="zipcode">
-	  </p>
-	  <p>
-		State <input type="text" name="state">
-	  </p>
-
-    <p>
-      <input type="submit">
-    </p>
-  </form>
-  {% endblock %}
+  
+	<link rel="stylesheet" href="../static/signup.css">
+ 
+	<section class="form my-4 mx-5">
+	  <div class="container">
+		<div class="row no-gutters">
+		  <div class="col-lg-5">
+			<img src="../static/images/burger1.jpg" class="img-fluid" alt="">
+		  </div>
+		  <div class="col-lg-7 px-5 pt-5" >
+			<form action="/users" method="POST">
+			<h1 class="font-weight-bold py-3 text-dark">Sign up</h1>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="name" placeholder="Name" class="form-control my-2 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="email" placeholder="Email" class="form-control my-3 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="password" placeholder="********" class="form-control my-3 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="phone" placeholder="Phone" class="form-control my-3 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="street" placeholder="Street" class="form-control my-3 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="city" placeholder="City" class="form-control my-3 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="zipcode" placeholder="Zipcode" class="form-control my-3 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <input type="state" placeholder="State" class="form-control my-3 p-2">
+				</div>
+			  </div>
+			  <div class="form-row">
+				<div class="col-lg-7">
+				  <button type="button" class="btn1 mt-3 mb-5">Submit</button>
+	
+				</div>
+	
+			  </div>
+			  
+	
+			</form>
+	
+	
+		  </div>
+	
+	
+	
+		</div>
+	
+	  </div>
+	
+	</section>
+	
+	  
+	{% endblock %} 
+	
   
 	 
 	  
