--- a/foodapp/templates/about.html
+++ b/foodapp/templates/about.html
@@ -2,5 +2,47 @@
 {% block title %} about  {% endblock%}
 {% block body%}
 {% include 'navbar.html'%}
-<h1>Hi im about page</h1>
+<h1>
+    <link rel="stylesheet" href="../static/about.css">
+    <section class="form my-4 mx-5">
+  <div class="container">
+    <div class="row no-gutters">
+        <div class="col-lg-5">
+            <img src="../static/images/burger1.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-5 px-5 pt-5">
+            <h1 class="font-weight-bold py-3 text-dark">About Us</h1>
+            <div class="content">
+                <p>
+                    At Wendy's, we're all about serving up fresh food, even if it means going the extra mile.
+                    When you walk through our doors, we do what we can to make everyone feel at home because our
+                    family extends through your community.</p>
+                
+            </div>
+
+        </div>
+
+    </div>
+
+  </div>
+    
+   
+
+            
+      
+
+      
+
+      
+      
+
+        
+        
+           
+      
+</section>
+
+
+
+</h1>
 {% endblock %}
