--- a/foodapp/templates/sign_up.html
+++ b/foodapp/templates/sign_up.html
@@ -14,56 +14,38 @@
 	  <div class="container">
 		<div class="row no-gutters">
 		  <div class="col-lg-5">
-			<img src="../static/images/burger1.jpg" class="img-fluid" alt="">
+			<img src="../static/images/burger2.jpg" class="img-fluid" alt="">
 		  </div>
 		  <div class="col-lg-7 px-5 pt-5" >
 			<form action="/users" method="POST">
 			<h1 class="font-weight-bold py-3 text-dark">Sign up</h1>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="name" placeholder="Name" class="form-control my-2 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="name" type="name" placeholder="Name" class="form-control my-2 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="email" placeholder="Email" class="form-control my-3 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="email" type="email" placeholder="Email" class="form-control my-3 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="password" placeholder="********" class="form-control my-3 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="password" type="password" placeholder="********" class="form-control my-3 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="phone" placeholder="Phone" class="form-control my-3 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="phone" type="phone" placeholder="Phone" class="form-control my-3 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="street" placeholder="Street" class="form-control my-3 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="street" type="street" placeholder="Street" class="form-control my-3 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="city" placeholder="City" class="form-control my-3 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="city" type="city" placeholder="City" class="form-control my-3 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="zipcode" placeholder="Zipcode" class="form-control my-3 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="zipcode" type="zipcode" placeholder="Zipcode" class="form-control my-3 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <input type="state" placeholder="State" class="form-control my-3 p-2">
-				</div>
+			  <div class="form-row col-lg-7">
+				  <input name="state" type="state" placeholder="State" class="form-control my-3 p-2">
 			  </div>
-			  <div class="form-row">
-				<div class="col-lg-7">
-				  <button type="button" class="btn1 mt-3 mb-5">Submit</button>
-	
-				</div>
+			  <div class="form-row col-lg-7">
+				  <!-- <button type="button" class="btn1 mt-3 mb-5">Submit</button> -->
+				  <button type="submit" class="btn1 mt-3 mb-5">Submit</button>
 	
 			  </div>
 			  
