--- a/foodapp/static/menu.css
+++ b/foodapp/static/menu.css
@@ -1,64 +1,71 @@
 
- *{
-     margin: 0;
-    padding: 0;
-    font-family: 'Kanit', sans-serif;
+*{
+    margin: 0;
+   padding: 0;
+   font-family: 'Kanit', sans-serif;
 }
 .card{
-    box-shadow: 0px 0px 5px black;
-    cursor: pointer;
-    transition: transform 0.5s ease;
-    margin: auto;
-    width: 200px;
+   box-shadow: 0px 0px 5px black;
+   cursor: pointer;
+   transition: transform 0.5s ease;
+   margin: auto;
+   width: 200px;
+   height: 400px;
 }
 
 .new-card{
-    margin-top: 50px;
-    cursor: pointer;
+   margin-top: 50px;
+   cursor: pointer;
+   margin: 100px;
 }
 
 .new-card h2{
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 10px;
+   font-size: 20px;
+   font-weight: bold;
+   margin-bottom: 10px;
 }
 .new-card h3{
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 10px;
+   font-size: 20px;
+   font-weight: bold;
+   margin-bottom: 10px;
 }
 #btn3{
-    text-align: center;
+   text-align: center;
+   margin-top: auto;
 }
 
 #btn3 button{
-    width: 150px;
-    height: 35px;
-    letter-spacing: 3px;
-    font-weight: bold;
-    border: none;
-    background-color: rgba(255,166,0);
-    transition: 0.50 ease-in;
+   width: 150px;
+   height: 35px;
+   letter-spacing: 3px;
+   font-weight: bold;
+   border: none;
+   background-color: rgba(255,166,0);
+   transition: 0.50 ease-in;
 }
 #btn3 button:hover{
-    background-color: black;
-    color: white;
+   background-color: black;
+   color: white;
 }
 .imgcontainer{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
 
+}
+
+.card-body {
+   display: flex;
+   flex-direction: column;
 }
 
 
 
 
-
-    
-    
-    
-    
-    
-    
-    
+   
+   
+   
+   
+   
+   
+   
