--- a/foodapp/templates/signin.html
+++ b/foodapp/templates/signin.html
@@ -1,5 +1,5 @@
 
- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block title %}sigin{% endblock %}
 {% include "navbar.html" %}
 
@@ -10,36 +10,27 @@
   <div class="container">
     <div class="row no-gutters">
       <div class="col-lg-5">
-        <img src="../static/images/burger1.jpg" class="img-fluid" alt="">
+        <img src="../static/images/burger3.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-7 px-5 pt-5" >
         <h1 class="font-weight-bold py-3 text-dark">Sign In</h1>
         <form action="/signin" method="POST">
-          <div class="form-row">
-            <div class="col-lg-7">
-              <input type="email" placeholder="Email-Adress" class="form-control my-2 p-2">
-            </div>
+          <div class="form-row col-lg-7">
+              <input name="email" type="email" placeholder="Email-Adress" class="form-control my-2 p-2">
           </div>
-          <div class="form-row">
-            <div class="col-lg-7">
-              <input type="password" placeholder="********" class="form-control my-2 p-2">
-            </div>
+          <div class="form-row col-lg-7">
+              <input name="password" type="password" placeholder="********" class="form-control my-2 p-2">
           </div>
-          <div class="form-row">
-            <div class="col-lg-7">
-              <button type="button" class="btn1 mt-3 mb-5">Sign in</button>
-
+          <div class="form-row col-lg-7">
+              <!-- <button type="button" class="btn1 mt-3 mb-5">Sign in</button> -->
+              <button type="submit" class="btn1 mt-3 mb-5">Sign in</button>
             </div>
 
-          </div>
           <h5>No account yet? <a href = "/sign_up">Create Account</a></h5>
 
         </form>
 
-
       </div>
-
-
 
     </div>
 
