--- a/foodapp/templates/about.html
+++ b/foodapp/templates/about.html
@@ -14,7 +14,7 @@
             <h1 class="font-weight-bold py-3 text-dark">About Us</h1>
             <div class="content">
                 <p>
-                    At Wendy's, we're all about serving up fresh food, even if it means going the extra mile.
+                    We're all about serving up fresh food, even if it means going the extra mile.
                     When you walk through our doors, we do what we can to make everyone feel at home because our
                     family extends through your community.</p>
                 
